# MaieoAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rebrand.py  render.yaml  requirements.txt
examples/: run_debate.py
maieo/: api.py  cli.py  server.py
maieo/agents/: arbitrator.py  base.py  challenger.py  proposer.py  synthesizer.py
maieo/core/: debate.py
mindmesh/: api.py  cli.py  server.py
mindmesh-web/: package.json
mindmesh-web/app/: layout.tsx  page.tsx
mindmesh-web/app/api/debate/: route.ts
mindmesh-web/app/api/history/: route.ts
mindmesh-web/app/api/history/[id]/: route.ts
mindmesh-web/app/share/[shareId]/: page.tsx
mindmesh-web/components/: DebateCard.tsx  InputBar.tsx  LandingPage.tsx  MobileHistorySheet.tsx  Sidebar.tsx
mindmesh-web/lib/: api.ts  debates.ts
mindmesh-web/types/: debate.ts
mindmesh/core/: router.py
tests/: test_debate.py
